# hoopla

./: .envrc.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  pytest.ini  test_gemini.py
cli/: agentic_rag_cli.py  augmented_generation_cli.py  describe_image_cli.py  evaluation_cli.py  hybrid_search_cli.py  keyword_search_cli.py  multimodal_search_cli.py  semantic_search_cli.py
cli/lib/: __init__.py  agentic_rag.py  chunked_semantic_search.py  evaluation.py  hybrid_search.py  inverted_index.py  keyword_search.py  llm_utils.py  multimodal_search.py  rag.py  search_utils.py  semantic_search.py  text_chunker.py
cli/lib/agentic_tools/: README.md  __init__.py  actor_search_tool.py  base.py  genre_search_tool.py  hybrid_search_tool.py  regex_search_tool.py  semantic_search_tool.py  utils.py
data/: golden_dataset.json
docs/: AGENTIC_RAG_IMPLEMENTATION.md  data_pipeline_tmdb.md
scripts/: build_movies_json.py
src/cli/: __init__.py  augmented_generation_cli.py  describe_image_cli.py  multimodal_search_cli.py
src/cli/lib/: chunked_semantic_search.py  image_search.py  inverted_index.py  llm_utils.py  multimodal_search.py  rag.py  search_utils.py  semantic_search.py  text_chunker.py  text_utils.py
src/cli/lib/agentic_tools/: actor_search_tool.py  constants.py  genre_search_tool.py  keyword_search_tool.py
src/movies/: normalization.py  omdb_client.py  tmdb_client.py
tests/: conftest.py  test_actor_search.py  test_actor_search_unit.py  test_build_movies_json.py  test_fallback.py  test_llm_utils.py  test_merge_strategies.py
